# iyox-Wormhole

./: .gitignore  .gitmodules  .metadata  Makefile  README.md  README_ZH.md  analysis_options.yaml  build.yaml  flake.nix  flutter_rust_bridge.yaml  garnix.yaml  icons_launcher.yaml  justfile  pubspec.lock.json  pubspec.yaml  slang.yaml
.dart_tool/: package_config.json  package_config_subset  version
.dart_tool/dartpad/: web_plugin_registrant.dart
.github/workflows/: build.yml  release.yml
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/gradle/: verification-metadata.xml
docker/: Dockerfile
fastlane/: Appfile  Fastfile  README.md
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  themed_app.dart  type_helpers.dart
lib/i18n/: _unused_translations.yaml  cs.i18n.yaml  de.i18n.yaml  en.i18n.yaml  it.i18n.yaml  strings.g.dart  strings_cs.g.dart  strings_de.g.dart  strings_en.g.dart  strings_it.g.dart  strings_zh.g.dart  zh.yaml
lib/pages/: ReceivePage.dart  Router.dart  SendPage.dart  SendingPage.dart  SettingsPage.dart  basePage.dart  qrCodeScannerPage.dart  qr_code_scanner_page.dart  receivePage.dart  receive_page.dart  receiving_page.dart  router.dart  sendPage.dart  send_page.dart  sending_page.dart  settings_page.dart
lib/rust/: api.dart  (+3 more)
linux/: CMakeLists.txt  my_application.cc
native/: Cargo.toml  rust-toolchain.toml
native/macros/: Cargo.toml
native/macros/src/: lib.rs
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
native/src/impls/: helpers.rs  mod.rs  path.rs  receive.rs  send.rs
native/src/wormhole/: handler.rs  helpers.rs  mod.rs  path.rs  receive.rs  send.rs  zip.rs
native/src/wormhole/types/: error_types.rs  t_update.rs  value.rs
nix/: android.nix  build_tool_builder.patch  deps.json  flutter-patch.nix  flutter.patch  flutter2.patch  flutter3.patch  get-version.nix  gradle-plugin.patch  gradle.patch  maven-repo.nix  run_build_tool.patch  update-locks.nix
rust/: Cargo.toml  rust-toolchain.toml
rust/macros/src/: lib.rs
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/wormhole/: handler.rs  helpers.rs  mod.rs  receive.rs  send.rs  zip.rs
rust/src/wormhole/types/: build_info.rs  error_types.rs  events.rs  mod.rs  t_update.rs  value.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+89 files in other folders)
