[package]
name = "native"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.71"
flutter_rust_bridge = "1.77.0"
magic-wormhole = "0.6.0"
futures = "0.3.28"
async-std = "1.12.0"
url = { version = "2.3.1", features = ["serde"] }
macros = {path = "macros", version="1"}
dart-sys = "4.0.2"

#[profile.release]
#opt-level = 'z'     # Optimize for size.
#lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = 'abort'     # Abort on panic
#strip = false        # Strip symbols from binary*
