[package]
name = "native"
version = "1.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.71"
flutter_rust_bridge = "1.79.0"
magic-wormhole = "0.6.1"
futures = "0.3.28"
async-std = "1.12.0"
url = { version = "2.3.1", features = ["serde"] }
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
macros = { path = "macros", version = "1" }
fastrand = "2.0.1"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
